--- a/card/card.html
+++ b/card/card.html
@@ -21,7 +21,7 @@
     <div class="card-container">
 
     <div class="room-card">
-  <img src="hotel5.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="/Hotel/images/hotel5.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -31,12 +31,12 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹4,999 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
   <div class="room-card">
-  <img src="hotel5.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="/Hotel/images/hotel2.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -46,13 +46,13 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹4,600 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
 
   <div class="room-card">
-  <img src="hotel5.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="/Hotel/images/hotel1.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -62,13 +62,13 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹4,200 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
   </div>
 
 
   <div class="room-card">
-  <img src="hotel5.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="/Hotel/images/hotel6.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -78,12 +78,12 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹1200 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
   </div>
 
     <div class="room-card">
-  <img src="hotel5.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="/Hotel/images/hotel7.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -93,12 +93,12 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹1800 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
     </div>
 
   <div class="room-card">
-  <img src="hotel5.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="/Hotel/images/hotel8.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -108,13 +108,13 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹5500 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
   </div>
 
    
 <div class="room-card">
-  <img src="hotel1.jpg" alt="Ocean View Suite" class="room-image">
+  <img src="/Hotel/images/hotel9.jpg" alt="Ocean View Suite" class="room-image">
   <div class="room-info">
     <h3>Ocean View Suite</h3>
     <p>⭐⭐⭐⭐⭐</p>
@@ -124,13 +124,13 @@
       <li>Complimentary Breakfast</li>
     </ul>
     <p class="price">₹4,800 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
 
 <div class="room-card">
-  <img src="hotel2.jpg" alt="Mountain Retreat Room" class="room-image">
+  <img src="/Hotel/images/hotel10.jpg" alt="Mountain Retreat Room" class="room-image">
   <div class="room-info">
     <h3>Mountain Retreat Room</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -140,13 +140,13 @@
       <li>Heated Pool Access</li>
     </ul>
     <p class="price">₹3,200 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
 
 <div class="room-card">
-  <img src="hotel3.jpg" alt="City Lights Deluxe" class="room-image">
+  <img src="/Hotel/images/hotel2.jpg" alt="City Lights Deluxe" class="room-image">
   <div class="room-info">
     <h3>City Lights Deluxe</h3>
     <p>⭐⭐⭐☆☆</p>
@@ -156,13 +156,13 @@
       <li>Mini Bar Included</li>
     </ul>
     <p class="price">₹2,700 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
 
 <div class="room-card">
-  <img src="hotel4.jpg" alt="Luxury Garden Suite" class="room-image">
+  <img src="/Hotel/images/hotel5.jpg" alt="Luxury Garden Suite" class="room-image">
   <div class="room-info">
     <h3>Luxury Garden Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -172,13 +172,13 @@
       <li>Complimentary Dinner</li>
     </ul>
     <p class="price">₹3800 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
 
 <div class="room-card">
-  <img src="hotel5.jpg" alt="Royal Heritage Suite" class="room-image">
+  <img src="/Hotel/images/hotel5.jpg" alt="Royal Heritage Suite" class="room-image">
   <div class="room-info">
     <h3>Royal Heritage Suite</h3>
     <p>⭐⭐⭐⭐⭐</p>
@@ -188,13 +188,13 @@
       <li>Private Balcony</li>
     </ul>
     <p class="price">₹1000 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
 
 <div class="room-card">
-  <img src="hotel6.jpg" alt="Lakeside Deluxe" class="room-image">
+  <img src="/Hotel/images/hotel5.jpg" alt="Lakeside Deluxe" class="room-image">
   <div class="room-info">
     <h3>Lakeside Deluxe</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -204,13 +204,13 @@
       <li>Free Wi-Fi</li>
     </ul>
     <p class="price">₹3,800 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
 
 <div class="room-card">
-  <img src="hotel7.jpg" alt="Sunset Paradise Room" class="room-image">
+  <img src="/Hotel/images/hotel5.jpg" alt="Sunset Paradise Room" class="room-image">
   <div class="room-info">
     <h3>Sunset Paradise Room</h3>
     <p>⭐⭐⭐☆☆</p>
@@ -220,13 +220,13 @@
       <li>Air Conditioning</li>
     </ul>
     <p class="price">₹2,500 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
 
 <div class="room-card">
-  <img src="hotel8.jpg" alt="Executive Business Suite" class="room-image">
+  <img src="/Hotel/images/hotel5.jpg" alt="Executive Business Suite" class="room-image">
   <div class="room-info">
     <h3>Executive Business Suite</h3>
     <p>⭐⭐⭐⭐⭐</p>
@@ -236,13 +236,13 @@
       <li>Room Service 24/7</li>
     </ul>
     <p class="price">₹4,000 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
 
 <div class="room-card">
-  <img src="hotel9.jpg" alt="Garden View Deluxe" class="room-image">
+  <img src="/Hotel/images/hotel5.jpg" alt="Garden View Deluxe" class="room-image">
   <div class="room-info">
     <h3>Garden View Deluxe</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -252,13 +252,13 @@
       <li>Complimentary Breakfast</li>
     </ul>
     <p class="price">₹3,000 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
 
 <div class="room-card">
-  <img src="hotel10.jpg" alt="Hillside Panorama Room" class="room-image">
+  <img src="/Hotel/images/hotel5.jpg" alt="Hillside Panorama Room" class="room-image">
   <div class="room-info">
     <h3>Hillside Panorama Room</h3>
     <p>⭐⭐⭐☆☆</p>
@@ -268,13 +268,13 @@
       <li>Free Wi-Fi</li>
     </ul>
     <p class="price">₹2,800 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
 
 <div class="room-card">
-  <img src="hotel4.jpg" alt="Romantic Honeymoon Suite" class="room-image">
+  <img src="/Hotel/images/hotel5.jpg" alt="Romantic Honeymoon Suite" class="room-image">
   <div class="room-info">
     <h3>Romantic Honeymoon Suite</h3>
     <p>⭐⭐⭐⭐⭐</p>
@@ -284,12 +284,12 @@
       <li>Complimentary Wine</li>
       </ul>
       <p class="price">₹2,000 / night</p>
-    <button class="button" onclick="window.location.href='book.html'" >Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'" >Book Now</button>
   </div>
 </div>
 
    <div class="room-card">
-  <img src="hotel2.jpg" alt="Family Comfort Suite" class="room-image">
+  <img src="/Hotel/images/hotel5.jpg" alt="Family Comfort Suite" class="room-image">
   <div class="room-info">
     <h3>Family Comfort Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -299,7 +299,7 @@
       <li>Free Breakfast</li>
     </ul>
     <p class="price">₹3,500 / night</p>
-    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
   </div>
 </div>
 
