--- a/main/index.html
+++ b/main/index.html
@@ -9,17 +9,23 @@
 <body>
     <div class="container">
     <header>
-        <p id="name">Hotel's</p>
+       <p id="name">Hotel's</p>
+             <div class="menu-toggle" id="menu-toggle">☰</div>
+
+      <!-- Navigation Menu -->
+      <nav id="nav-menu">
         <div id="home" class="box">Home</div>
         <div id="hotel" class="box">Hotels</div>
-        <div id="contact" class="box">contacts</div>
-      <div id="locations"  class="box">Locations</div>  
-       <div id="login"  class="box">Log-in</div>
-      <div id="registr" class="box">Booking</div> 
+        <div id="contact" class="box">Contacts</div>
+        <div id="locations" class="box">Locations</div>
+        <div id="login" class="box">Log-in</div>
+        <div id="registr" class="box">Booking</div>
+      </nav>
+    </header>
     </header>
     
     <div id="written">
-           <h4>Stay your journy to your dream destination here.</h4>
+           <p>Stay your journy to your dream destination here.</p>
     </div>
     <div class="explore">Explore Hotels</div>
     
