--- a/card.html
+++ b/card.html
@@ -21,7 +21,7 @@
     <div class="card-container">
 
     <div class="room-card">
-  <img src="/Hotel/images/hotel5.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="images/hotel5.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -31,12 +31,12 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹4,999 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
   <div class="room-card">
-  <img src="/Hotel/images/hotel2.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="images/hotel2.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -46,13 +46,13 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹4,600 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
 
   <div class="room-card">
-  <img src="/Hotel/images/hotel1.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="images/hotel1.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -62,13 +62,13 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹4,200 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
   </div>
 
 
   <div class="room-card">
-  <img src="/Hotel/images/hotel6.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="images/hotel6.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -78,12 +78,12 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹1200 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
   </div>
 
     <div class="room-card">
-  <img src="/Hotel/images/hotel7.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="images/hotel7.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -93,12 +93,12 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹1800 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
     </div>
 
   <div class="room-card">
-  <img src="/Hotel/images/hotel8.jpg" alt="Deluxe King Suite" class="room-image">
+  <img src="images/hotel8.jpg" alt="Deluxe King Suite" class="room-image">
   <div class="room-info">
     <h3>Deluxe King Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -108,7 +108,7 @@
       <li>Swimming Pool Access</li>
     </ul>
     <p class="price">₹5500 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
   </div>
 
@@ -124,7 +124,7 @@
       <li>Complimentary Breakfast</li>
     </ul>
     <p class="price">₹4,800 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
@@ -140,7 +140,7 @@
       <li>Heated Pool Access</li>
     </ul>
     <p class="price">₹3,200 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
@@ -156,7 +156,7 @@
       <li>Mini Bar Included</li>
     </ul>
     <p class="price">₹2,700 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
@@ -172,7 +172,7 @@
       <li>Complimentary Dinner</li>
     </ul>
     <p class="price">₹3800 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
@@ -188,7 +188,7 @@
       <li>Private Balcony</li>
     </ul>
     <p class="price">₹1000 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
@@ -204,7 +204,7 @@
       <li>Free Wi-Fi</li>
     </ul>
     <p class="price">₹3,800 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
@@ -220,7 +220,7 @@
       <li>Air Conditioning</li>
     </ul>
     <p class="price">₹2,500 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
@@ -236,7 +236,7 @@
       <li>Room Service 24/7</li>
     </ul>
     <p class="price">₹4,000 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
@@ -252,7 +252,7 @@
       <li>Complimentary Breakfast</li>
     </ul>
     <p class="price">₹3,000 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
@@ -268,7 +268,7 @@
       <li>Free Wi-Fi</li>
     </ul>
     <p class="price">₹2,800 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
@@ -284,7 +284,7 @@
       <li>Complimentary Wine</li>
       </ul>
       <p class="price">₹2,000 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'" >Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'" >Book Now</button>
   </div>
 </div>
 
@@ -299,7 +299,7 @@
       <li>Free Breakfast</li>
     </ul>
     <p class="price">₹3,500 / night</p>
-    <button class="button" onclick="window.location.href='/Hotel/book/book.html'">Book Now</button>
+    <button class="button" onclick="window.location.href='book.html'">Book Now</button>
   </div>
 </div>
 
