--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div id="hotel" class="box">Hotels</div>
         <div id="contact" class="box">Contacts</div>
         <div id="locations" class="box">Locations</div>
-        <div id="login" class="box" onclick="window.location.href='../log-in/index.html'">Log-in</div>
-        <div id="registr" class="box" onclick="window.location.href='../card/index.html'">Booking</div>
+        <div id="login" class="box" onclick="window.location.href='../login.html'">Log-in</div>
+        <div id="registr" class="box" onclick="window.location.href='../card.html'">Booking</div>
       </nav>
     </header>
     </header>
@@ -27,7 +27,7 @@
     <div id="written">
            <p>Stay your journy to your dream destination here.</p>
     </div>
-    <div class="explore" onclick="window.location.href='../card/index.html'">Explore Hotels</div>
+    <div class="explore" onclick="window.location.href='../card.html'">Explore Hotels</div>
     
       <div class="container2">
     <div class="scrolling-wrapper">
