--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
-    <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <div class="container">
@@ -14,6 +14,6 @@
         <button id="btn">Log-in</button>
         <p id="paragraph">Login Sucessfully.</p>
     </div>
-    <script src="index.js"></script>
+    <script src="login.js"></script>
 </body>
 </html>
