--- a/card.html
+++ b/card.html
@@ -114,7 +114,7 @@
 
    
 <div class="room-card">
-  <img src="/Hotel/images/hotel9.jpg" alt="Ocean View Suite" class="room-image">
+  <img src="images/hotel9.jpg" alt="Ocean View Suite" class="room-image">
   <div class="room-info">
     <h3>Ocean View Suite</h3>
     <p>⭐⭐⭐⭐⭐</p>
@@ -130,7 +130,7 @@
 
 
 <div class="room-card">
-  <img src="/Hotel/images/hotel10.jpg" alt="Mountain Retreat Room" class="room-image">
+  <img src="images/hotel10.jpg" alt="Mountain Retreat Room" class="room-image">
   <div class="room-info">
     <h3>Mountain Retreat Room</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -146,7 +146,7 @@
 
 
 <div class="room-card">
-  <img src="/Hotel/images/hotel2.jpg" alt="City Lights Deluxe" class="room-image">
+  <img src="images/hotel2.jpg" alt="City Lights Deluxe" class="room-image">
   <div class="room-info">
     <h3>City Lights Deluxe</h3>
     <p>⭐⭐⭐☆☆</p>
@@ -162,7 +162,7 @@
 
 
 <div class="room-card">
-  <img src="/Hotel/images/hotel5.jpg" alt="Luxury Garden Suite" class="room-image">
+  <img src="images/hotel5.jpg" alt="Luxury Garden Suite" class="room-image">
   <div class="room-info">
     <h3>Luxury Garden Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -178,7 +178,7 @@
 
 
 <div class="room-card">
-  <img src="/Hotel/images/hotel5.jpg" alt="Royal Heritage Suite" class="room-image">
+  <img src="images/hotel5.jpg" alt="Royal Heritage Suite" class="room-image">
   <div class="room-info">
     <h3>Royal Heritage Suite</h3>
     <p>⭐⭐⭐⭐⭐</p>
@@ -194,7 +194,7 @@
 
 
 <div class="room-card">
-  <img src="/Hotel/images/hotel5.jpg" alt="Lakeside Deluxe" class="room-image">
+  <img src="images/hotel5.jpg" alt="Lakeside Deluxe" class="room-image">
   <div class="room-info">
     <h3>Lakeside Deluxe</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -210,7 +210,7 @@
 
 
 <div class="room-card">
-  <img src="/Hotel/images/hotel5.jpg" alt="Sunset Paradise Room" class="room-image">
+  <img src="images/hotel5.jpg" alt="Sunset Paradise Room" class="room-image">
   <div class="room-info">
     <h3>Sunset Paradise Room</h3>
     <p>⭐⭐⭐☆☆</p>
@@ -226,7 +226,7 @@
 
 
 <div class="room-card">
-  <img src="/Hotel/images/hotel5.jpg" alt="Executive Business Suite" class="room-image">
+  <img src="images/hotel5.jpg" alt="Executive Business Suite" class="room-image">
   <div class="room-info">
     <h3>Executive Business Suite</h3>
     <p>⭐⭐⭐⭐⭐</p>
@@ -242,7 +242,7 @@
 
 
 <div class="room-card">
-  <img src="/Hotel/images/hotel5.jpg" alt="Garden View Deluxe" class="room-image">
+  <img src="images/hotel5.jpg" alt="Garden View Deluxe" class="room-image">
   <div class="room-info">
     <h3>Garden View Deluxe</h3>
     <p>⭐⭐⭐⭐☆</p>
@@ -258,7 +258,7 @@
 
 
 <div class="room-card">
-  <img src="/Hotel/images/hotel5.jpg" alt="Hillside Panorama Room" class="room-image">
+  <img src="images/hotel5.jpg" alt="Hillside Panorama Room" class="room-image">
   <div class="room-info">
     <h3>Hillside Panorama Room</h3>
     <p>⭐⭐⭐☆☆</p>
@@ -274,7 +274,7 @@
 
 
 <div class="room-card">
-  <img src="/Hotel/images/hotel5.jpg" alt="Romantic Honeymoon Suite" class="room-image">
+  <img src="images/hotel5.jpg" alt="Romantic Honeymoon Suite" class="room-image">
   <div class="room-info">
     <h3>Romantic Honeymoon Suite</h3>
     <p>⭐⭐⭐⭐⭐</p>
@@ -289,7 +289,7 @@
 </div>
 
    <div class="room-card">
-  <img src="/Hotel/images/hotel5.jpg" alt="Family Comfort Suite" class="room-image">
+  <img src="images/hotel5.jpg" alt="Family Comfort Suite" class="room-image">
   <div class="room-info">
     <h3>Family Comfort Suite</h3>
     <p>⭐⭐⭐⭐☆</p>
